# us-rl-portfolio

./: .agent-context.json  .claudeignore  .codexignore  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
config/: base.yaml  baseline_v1_intraperiod_overlay_sp100.yaml  baseline_v1_volatility_score_sp100.yaml
docs/: ARCHITECTURE.md  DATA_AND_FEATURE_ENGINEERING.md  NEXT_STEPS.md  ROADMAP.md  agent_handoff.md  phase_a_plan.md  session_handoff.md
scripts/: build_features.py  build_pit_universe.py  build_sec_fundamentals_poc.py  build_universe_config.py  check_feature_parity_g0.py  current_portfolio.py  download_data.py  prepare_canonical_fundamentals.py  refresh_session_context.py  refresh_session_context.sh  run_alpha_research.py  run_backtest.py  run_beta_analysis.py  run_crash_onset_control.py  run_diagnostics.py  run_drawdown_attribution.py  run_drift_monitor_g3.py  run_intraperiod_overlay_hysteresis.py  run_intraperiod_risk_control.py  run_momentum_v2.py  run_momentum_vol_combo.py  run_optimizer_stability_report.py  run_phase_a1_volatility_robustness.py  run_phase_a2_portfolio_expression.py  run_phase_a3_multi_sleeve_alpha.py  run_phase_a4_1_crisis_diversifier_v2.py  run_phase_a4_defensive_sleeve.py  run_phase_a5_data_feature_audit.py  run_phase_a7_1_drawdown_control.py  run_phase_a7_2_robustness.py  run_phase_a7_3_membership_coverage_artifacts.py  run_phase_a7_trend_overlay.py  run_phase_b0_baseline_guard.py  run_phase_b1_simulator_reproduction.py  run_phase_b2_turnover_control.py  (+18 more)
src/rl/: reward.py  (+10 more)
(+216 files in other folders)
